2008-08-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el: Make xref buffers use `slime-with-popup-buffer',
	nee `slime-with-temp-buffer'.

	(slime-with-xref-buffer): Rewritten using a popup buffer.
	(slime-init-xref-buffer): Removed.
	(slime-display-xref-buffer): Removed.

2008-08-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el: Rename slime's temp-buffer to popup-buffer.

2008-08-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-compiler-notes-mode, slime-connection-ist-mode):
	Add slime-temp-buffer-mode-map to docstring.

2008-08-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-connections-buffer-name): New variable.
	(slime-list-connections): Use it.
	(def-slime-selector ?c): Ditto

2008-08-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el: Make the threads browser use `slime-with-temp-buffer'.

	(slime-temp-buffer-quit-function): New buffer-local
	variable. Defaults to `slime-temp-buffer-quit'.
	(slime-temp-buffer-mode): `q' invokes above variable now.

	(slime-threads-buffer-name): New variable.
	(slime-list-threads): Use slime-with-temp-buffer.
	(slime-update-threads-buffer): New. Lifted from
	slime-list-threads.
	(slime-thread-quit): Renamed to slime-quit-threads-buffer.

2008-08-08  Helmut Eller  <heller@common-lisp.net>

	Unify event dispatching for single and multi-threaded cases.

	* swank.lisp (send-to-control-thread,read-from-control-thread)
	(send-to-socket-io,read-from-socket-io): Deleted.
	(send-event, read-event, send-to-emacs)
	(signal-interrupt, use-threads-p): New functions.
	And more random changes.

2008-08-08  Helmut Eller  <heller@common-lisp.net>

	Spawn the auto-flush thread in the front end.
	This removes some copy&paste code in various backends.

	* swank.lisp (auto-flush-loop): New function.
	(open-streams): Use it.
	* swank-backend.lisp (make-stream-interactive): Deleted.

2008-08-08  Helmut Eller  <heller@common-lisp.net>

	* slime.el (test disconnect): Call slime-inferior-process